# CerebralSDKalpha

./: .gitignore  Makefile  README.md  mypy.ini  ontology.parietal.yaml  prompts.md  pyproject.toml  ruff.toml
.github/workflows/: eval-harness.yml
Foundational Files/: Cerebral Studio PRE-BETA Manual.md
configs/: embeddings.yaml  memory.yaml
examples/: basic_usage.py
knowledge/: event_taxonomy.yaml
knowledge/datasets/: entities.jsonl  qa.jsonl  snippets.jsonl
scripts/: eval_retrieval.py  synthetic_events.py
sdk/: __init__.py
sdk/core/: __init__.py  cerebral.py  composer.py  context.py  hippocampus.py  parietal.py  pfc.py  types.py
sdk/harness/: __init__.py  datasets.py  metrics.py  reporter.py  run.py  synthetic.py
seeds/: facts.csv  persona.md
tests/: conftest.py  test_context.py  test_datasets.py  test_memory.py
