[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cerebral-sdk"
version = "0.1.0"
description = "Cerebral SDK (memory triad prototype: Prefrontal Cache, Parietal Graph, Hippocampus)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Harvey" }]

dependencies = [
  "numpy>=1.24",
  "networkx>=3.1",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.5",
  "mypy>=1.10.0",
  "pytest>=7.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sdk*", "scripts*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
